# SIMD_project

./: CMakeLists.txt  COMPLETE_GUIDE.md  LICENSE  README.md  build.sh  simd_v3_benchmark_results.csv  simd_v3_benchmark_results_1751127313.csv  simd_v3_benchmark_results_fixed.csv
benchmark/: benchmark_main.cpp  benchmark_main_v2.cpp  benchmark_main_v3.cpp
cmake/: simd_libraryConfig.cmake.in  simd_libraryConfig.cmake.in.cmake
include/: simd.hpp  simd_v2.hpp  simd_v3.hpp
test/: test_main.cpp
